# qc

./: .gitignore  LICENSE  README.md  h2_part.ipynb  min_part.ipynb  min_part.py  plots.py  pyproject.toml  tests.py  tutorial.ipynb
MolHamLinAlg/: Manifest.toml  Project.toml
MolHamLinAlg/src/: MolHamLinAlg.jl  ham_decomp.jl  op_eigen.jl  simple_ops.jl  test.jl  unitary.jl
d_types/: config_types.py  cvx_exp.py  fragment_types.py  hamiltonian.py  unitary_type.py
data/mol_data/: nh3_mol_data.pkl
julia/: Manifest.toml
min_part/: f3_opers.py  f3_optimis.py  f_3_ops.py  ffrag_utils.py  gfro_decomp.py  ham_decomp.py  ham_occ.py  ham_utils.py  julia_ops.py  lower_bound.py  lr_decomp.py  molecules.py  operators.py  plots.py  proj_ham.py  remote.py  reorder.py  tensor.py  tensor_utils.py  typing.py  utils.py
pert_trotter/: __init__.py  config.py  cost_utils.py  energy_frag_utils.py  error_pert.py  fermi_frag.py  ffrag_utils.py  fock_utils.py  ham_utils.py  io_utils.py  proj_ham.py  qubit_utils.py  taper_utils.py  tensor_utils.py  trotter_utils.py
prev/: config.py  fermi_frag.py  fock_utils.py  qubit_utils.py  taper_utils.py
testing_utils/: sim_molecules.py
tests/: conversion_tests.py  decomp_tests.py  dog.py  f3_tests.py  gfro_tests.py  inspec_test.py  lower_bound_tests.py  operator_tests.py  test.pkl  test_conversion.py  test_f3.py  test_f3_lb.py  test_gfro.py  test_julia.py  test_lower_bound.py  test_lr.py  test_operators.py  test_ref_lb.py  test_reference_lb.py  test_saving.py  test_sim_input.py  test_tensor.py  test_unitaries.py
tests/f3/: A_frag.pkl  (+7 more)
(+7263 files in other folders)
